# oneDNN

./: .clang-format  CITATION.cff  CMakeLists.txt  MAINTAINERS.md  README.binary.in  README.md  THIRD-PARTY-PROGRAMS
src/cpu/rv64/: CMakeLists.txt  cpu_isa_traits.cpp  cpu_isa_traits.hpp  jit_generator.hpp  jit_primitive_conf.hpp  jit_rvv_1x1_conv_kernel.cpp  jit_rvv_1x1_conv_kernel.hpp  jit_rvv_1x1_convolution.cpp  jit_rvv_1x1_convolution.hpp  jit_rvv_batch_normalization_kernel.cpp  jit_rvv_batch_normalization_kernel.hpp  jit_rvv_binary_kernel.cpp  jit_rvv_binary_kernel.hpp  jit_rvv_eltwise_kernel.cpp  jit_rvv_eltwise_kernel.hpp  jit_rvv_gemm_convolution_copy_kernel.cpp  jit_rvv_gemm_convolution_copy_kernel.hpp  jit_rvv_gemm_convolution_kernel.cpp  jit_rvv_gemm_convolution_kernel.hpp  jit_rvv_gemm_convolution_post_kernel.cpp  jit_rvv_gemm_convolution_post_kernel.hpp  jit_rvv_group_normalization_kernel.cpp  jit_rvv_group_normalization_kernel.hpp  jit_rvv_inner_product_kernel.cpp  jit_rvv_inner_product_kernel.hpp  jit_rvv_layernorm_kernel.cpp  jit_rvv_layernorm_kernel.hpp  jit_rvv_matmul_post_kernel.cpp  jit_rvv_matmul_post_kernel.hpp  jit_rvv_pooling_kernel.cpp  jit_rvv_pooling_kernel.hpp  jit_rvv_softmax_f16_kernel.cpp  jit_rvv_softmax_f16_kernel.hpp  jit_rvv_softmax_kernel.cpp  jit_rvv_softmax_kernel.hpp  jit_uni_binary.cpp  jit_uni_binary.hpp  jit_uni_dwconv.cpp  jit_uni_dwconv.hpp  jit_uni_eltwise.cpp  (+58 more)
src/cpu/rv64/brgemm/: brgemm.cpp  brgemm.hpp  brgemm_types.hpp  jit_brgemm_kernel.cpp  jit_brgemm_kernel.hpp
src/cpu/rv64/gemm/: jit_rvv_gemm_kernel.cpp  jit_rvv_gemm_kernel.hpp  jit_rvv_gemm_s8_kernel.cpp  jit_rvv_gemm_s8_kernel.hpp  rvv_gemm_f32.cpp  rvv_gemm_f32.hpp  rvv_gemm_s8s8s32.cpp  rvv_gemm_s8s8s32.hpp  rvv_gemm_utils_f32.cpp  rvv_gemm_utils_f32.hpp
src/cpu/rv64/injectors/: injector_utils.cpp  injector_utils.hpp  jit_uni_binary_injector.cpp  jit_uni_binary_injector.hpp  jit_uni_eltwise_injector.cpp  jit_uni_eltwise_injector.hpp  jit_uni_postops_injector.cpp  jit_uni_postops_injector.hpp
src/cpu/rv64/reorder/: jit_blk_reorder.cpp  jit_blk_reorder.hpp  jit_uni_reorder.cpp  jit_uni_reorder.hpp  jit_uni_reorder_kernel.cpp  jit_uni_reorder_kernel.hpp  jit_uni_reorder_utils.cpp  jit_uni_reorder_utils.hpp
src/gpu/intel/: CMakeLists.txt  binary_common.h  block_structure.cpp  block_structure.hpp  concat_common.h  concat_utils.hpp  config.hpp  convolution_deconvolution.hpp  convolution_inner_product.cpp  convolution_inner_product.hpp  custom_reorder.cl  custom_reorder.cpp  custom_reorder.hpp  deconv_backward_bias.cl  dispatch.h  dynamic_scale.cl  engine.cpp  engine.hpp  gemm_inner_product.cpp  gemm_inner_product.hpp  gemm_matmul.cpp  gemm_matmul.hpp  generic_reorder.cl  generic_reorder.cpp  generic_reorder.hpp  gpu_post_ops.cpp  gpu_post_ops.hpp  gpu_primitive.hpp  kernel_cache.cpp  kernel_cache.hpp  layer_norm_common.h  lnorm_utils.hpp  logging.hpp  many_inputs_sum.cl  many_inputs_sum.cpp  many_inputs_sum.hpp  micro_sdpa.cl  micro_sdpa.cpp  micro_sdpa.hpp  micro_sdpa_configs.cpp  (+138 more)
src/gpu/intel/binary/: common.h  config.hpp  multi_po_reorder.hpp  simple.cl  simple.cpp  simple.hpp  xe.cl  xe.cpp  xe.hpp
src/gpu/intel/bnorm/: config.hpp  lookup_table.cpp  lookup_table.hpp  model.cpp  model.hpp  nhwc.cpp  nhwc.hpp  nhwc_batch_normalization.cpp  nhwc_batch_normalization.hpp  nhwc_reusable.cl  nhwc_reusable.cpp  nhwc_reusable.h  nhwc_reusable.hpp  ref.cl  ref.cpp  ref.hpp  ref_batch_normalization.cpp  ref_batch_normalization.hpp  ref_bnorm.cl  reusable.cl  reusable.cpp  reusable.hpp  reusable_bnorm.cl  reusable_bnorm.cpp  reusable_bnorm.hpp  simple.cl  simple.cpp  simple.hpp  simple_bnorm.cl  simple_bnorm.cpp  simple_bnorm.hpp  utils.cpp  utils.hpp  xe.cpp  xe.h  xe.hpp  xe_batch_normalization.cpp  (+12 more)
(+3458 files in other folders)
